--- a/front/package.json
+++ b/front/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser": "~8.0.3",
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
-    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.0.0",
     "angular-toastr": "^2.1.1",
     "bootstrap": "^4.5.2",
+    "ng-bootstrap": "^1.6.3",
+    "ngx-spinner": "^8.1.0",
     "ngx-toastr": "^10.0.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.13.0",
