--- a/front/angular.json
+++ b/front/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angular-formdata": {
+    "csvgen-ui": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angular-formdata",
+            "outputPath": "dist/csvgen-ui",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -59,18 +59,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular-formdata:build"
+            "browserTarget": "csvgen-ui:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angular-formdata:build:production"
+              "browserTarget": "csvgen-ui:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular-formdata:build"
+            "browserTarget": "csvgen-ui:build"
           }
         },
         "test": {
@@ -107,16 +107,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angular-formdata:serve"
+            "devServerTarget": "csvgen-ui:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "angular-formdata:serve:production"
+              "devServerTarget": "csvgen-ui:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "angular-formdata"
+  "defaultProject": "csvgen-ui"
 }
