--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
       },
     "objectscript.conn" :{
       "ns": "IRISAPP",
-      "active": true,
+      "active": false,
       "username": "_SYSTEM",
       "password": "SYS",
       "docker-compose": {
